[gd_scene load_steps=7 format=2]

[ext_resource path="res://01Prefabs/Containers/Chest1/Chest1.gd" type="Script" id=1]
[ext_resource path="res://01Prefabs/Containers/Chest1/Untitled 11.png" type="Texture" id=2]
[ext_resource path="res://01Prefabs/Containers/Chest1/Untitled 11 2.png" type="Texture" id=3]
[ext_resource path="res://06Sounds/8bit_Sounds/Item6.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Chest" type="StaticBody2D"]
pause_mode = 2
script = ExtResource( 1 )
Chest_Text = "(no chest text set)"
opened_texture = ExtResource( 3 )
item_name = "(no item name set)"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="opened" from="." to="." method="_on_Chest_opened"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
